--- a/src/uk/ac/gtvl2/resources/MessagesBundle.properties
+++ b/src/uk/ac/gtvl2/resources/MessagesBundle.properties
@@ -16,12 +16,14 @@ GET=get
 REMOVE=remove
 LIST=list
 
+ERROR=Error : {0}, caused by {1}
 CRITICAL=[CRITICAL]\u0020
-MISSING_TRANSLATION=Translation for {0} is missing in {1}.
+MISSING_TRANSLATION=Translation for {0} is missing in {1} line {2}.
 CMD_NOT_FOUND=Command not found : {0}
 PROMPT=$>\u0020
 
 
+PROGRAM=Fotoshop v2.0.
 WELCOME=Welcome to Fotoshop.
 GOODBYE=Thank you for using Fotoshop !
 HELP_TEXT=You are using Fotoshop, here is the list of all available commands : \n {0}
