--- a/src/uk/ac/gtvl2/resources/MessagesBundle.properties
+++ b/src/uk/ac/gtvl2/resources/MessagesBundle.properties
@@ -1,4 +1,5 @@
 OPEN=open
+OPEN_TITLE=Select file to open
 OPEN_ERROR=USAGE: open filename
 OPEN_ERROR_FILE=Couldn't find file {0} to open.
 OPEN_SUCCESS=Successfully opened file {0}
@@ -9,6 +10,7 @@ ROT90=rot90
 HELP=help
 LANG=lang
 QUIT=quit
+QUIT_CONFIRM=Are you sure you want to quit ? Any unsaved work will be lost !
 SCRIPT=script
 UNDO=undo
 PUT=put
@@ -24,6 +26,6 @@ PROMPT=$>\u0020
 
 
 PROGRAM=Fotoshop v2.0.
-WELCOME=Welcome to Fotoshop.
+WELCOME=Welcome to Fotoshop, use help to start.
 GOODBYE=Thank you for using Fotoshop !
 HELP_TEXT=You are using Fotoshop, here is the list of all available commands : \n {0}
