On s'approche de la fin !  :3

--- a/src/uk/ac/gtvl2/resources/MessagesBundle.properties
+++ b/src/uk/ac/gtvl2/resources/MessagesBundle.properties
@@ -1,27 +1,38 @@
 OPEN=open
 OPEN_TITLE=Select file to open
-OPEN_ERROR=USAGE: open filename
+OPEN_ERROR1=USAGE: open filename
+OPEN_ERROR2=Error while opening picture.
 OPEN_ERROR_FILE=Couldn't find file {0} to open.
 OPEN_SUCCESS=Successfully opened file {0}
 SAVE=save
+SAVE_SUCCESS=Successfully save file {0}
 LOOK=look
+LOOK_NULL=No picture loaded. Use open to load one.
+LOOK_SUCCESS=Currently editing {0}. Filters are : \n {1}
 MONO=mono
 ROT90=rot90
 HELP=help
 LANG=lang
+LANG_ERROR=USAGE: lang locale
 QUIT=quit
 QUIT_CONFIRM=Are you sure you want to quit ? Any unsaved work will be lost !
 SCRIPT=script
 UNDO=undo
+UNDO_ERROR=Nothing to undo !
 PUT=put
+PUT_ERROR=USAGE: put name
 GET=get
+GET_ERROR1=USAGE: get name
+GET_ERROR2=Invalid cache name
 REMOVE=remove
+REMOVE_ERROR=USAGE: remove name
 LIST=list
 
 ERROR=Error : {0}, caused by {1}
 CRITICAL=[CRITICAL]\u0020
 MISSING_TRANSLATION=Translation for {0} is missing in {1} line {2}.
 CMD_NOT_FOUND=Command not found : {0}
+NO_PIC=No picture loaded. Use open and try again.
 PROMPT=$>\u0020
 
 
@@ -29,3 +40,5 @@ PROGRAM=Fotoshop v2.0.
 WELCOME=Welcome to Fotoshop, use help to start.
 GOODBYE=Thank you for using Fotoshop !
 HELP_TEXT=You are using Fotoshop, here is the list of all available commands : \n {0}
+
+CACHE=Cache
