changing GuiView to have a new interface. which one is the best ?

--- a/src/uk/ac/gtvl2/resources/MessagesBundle.properties
+++ b/src/uk/ac/gtvl2/resources/MessagesBundle.properties
@@ -42,3 +42,6 @@ GOODBYE=Thank you for using Fotoshop !
 HELP_TEXT=You are using Fotoshop, here is the list of all available commands : \n {0}
 
 CACHE=Cache
+FILTERS=Filters
+FILE=file
+EDIT=edit
