--- a/src/uk/ac/gtvl2/resources/MessagesBundle.properties
+++ b/src/uk/ac/gtvl2/resources/MessagesBundle.properties
@@ -2,7 +2,7 @@ OPEN=open
 OPEN_TITLE=Select file to open
 OPEN_ERROR1=USAGE: open filename
 OPEN_ERROR2=Error while opening picture.
-OPEN_ERROR_FILE=Couldn't find file {0} to open.
+OPEN_ERROR_FILE=No file {0} to open.
 OPEN_SUCCESS=Successfully opened file {0}
 SAVE=save
 SAVE_SUCCESS=Successfully save file {0}
@@ -17,16 +17,22 @@ LANG_ERROR=USAGE: lang locale
 QUIT=quit
 QUIT_CONFIRM=Are you sure you want to quit ? Any unsaved work will be lost !
 SCRIPT=script
+SCRIPT_ERROR1=USAGE: script filename
 UNDO=undo
 UNDO_ERROR=Nothing to undo !
 PUT=put
-PUT_ERROR=USAGE: put name
+PUT_ERROR1=USAGE: put name
+PUT_ERROR2=Cache name already in use.
 GET=get
 GET_ERROR1=USAGE: get name
 GET_ERROR2=Invalid cache name
 REMOVE=remove
-REMOVE_ERROR=USAGE: remove name
+REMOVE_ERROR1=USAGE: remove name
+REMOVE_ERROR2=Invalid cache name
 LIST=list
+FLIPH=fliph
+FLIPV=flipv
+INVERT=invert
 
 ERROR=Error : {0}, caused by {1}
 CRITICAL=[CRITICAL]\u0020
